Создано с помощью Colaboratory

--- a/Копия_блокнота_"AwareTeam_ipynb".ipynb
+++ b/Копия_блокнота_"AwareTeam_ipynb".ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Копия блокнота \"AwareTeam.ipynb\"",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AwareTeam-LOD/chore-finals/blob/main/%D0%9A%D0%BE%D0%BF%D0%B8%D1%8F_%D0%B1%D0%BB%D0%BE%D0%BA%D0%BD%D0%BE%D1%82%D0%B0_%22AwareTeam_ipynb%22.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -75,8 +64,8 @@
         }
       ],
       "source": [
-        "!wget https://test.deqstudio.com/datapack.zip -P datas/\n",
-        "!unzip datas/datapack.zip -d datas/"
+        "!wget https://test.deqstudio.com/data1.zip -P datas/\n",
+        "!unzip datas/data1.zip -d datas/"
       ]
     },
     {
